# phenotype-gateway

./: .gitmodules  README.md  Taskfile.yml
.github/workflows/: cargo.yml  scaffold.yml
docs/: ABSORPTION.md  PROMOTION.md  SPEC.md  UPSTREAM.md
docs/adrs/: ADR-GW-001-router-lang.md
docs/operations/: DEPLOY.md  SUBMODULE_UPDATE.md
docs/router/: COMBO_ROUTING.md  MCP_SUBSET.md
scripts/: smoke-go.ps1  smoke-go.sh  smoke-router.ps1
spikes/go/agentapi/: README.md  smoke.sh
spikes/go/argis/: README.md  smoke.sh
spikes/go/bifrost/: README.md  smoke.sh
spikes/go/cliproxy/: README.md  smoke.sh
spikes/go/router/: README.md
spikes/mojo/: README.md
spikes/mojo/router/: README.md
spikes/rust/capacity/: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  VERSION.toml  WORKLOG.md  llms.txt  llvm-cov.toml
spikes/rust/capacity/docs/: SPEC.md
spikes/rust/capacity/src/: lib.rs
spikes/rust/capacity/src/pheno_capacity/: attention.rs  estimate.rs  math.rs  mod.rs  policy.rs
spikes/rust/router/: Cargo.toml  README.md
spikes/rust/router/src/: delegate.rs  lib.rs
spikes/zig/router/: README.md  build.zig
